--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-moment": "^0.9.7",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "typeface-nunito-sans": "^0.0.72"
   },
   "devDependencies": {
     "gatsby-plugin-root-import": "^2.0.5",
