--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-helmet": "^5.2.1",
     "react-moment": "^0.9.7",
     "styled-components": "^5.0.1",
+    "styled-components-breakpoint": "^3.0.0-preview.20",
     "typeface-nunito-sans": "^0.0.72"
   },
   "devDependencies": {
