--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-moment": "^0.9.7",
+    "react-spring": "^9.0.0-beta.34",
+    "react-use-gesture": "^7.0.5",
     "styled-components": "^5.0.1",
     "styled-components-breakpoint": "^3.0.0-preview.20",
     "typeface-nunito-sans": "^0.0.72"
