--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-moment": "^0.9.7",
+    "react-responsive-carousel": "^3.2.4",
     "react-spring": "^9.0.0-beta.34",
     "react-use-gesture": "^7.0.5",
     "styled-components": "^5.0.1",
