--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-use-gesture": "^7.0.5",
     "styled-components": "^5.0.1",
     "styled-components-breakpoint": "^3.0.0-preview.20",
-    "typeface-nunito-sans": "^0.0.72"
+    "typeface-nunito-sans": "^0.0.72",
+    "typeface-oranienbaum": "^0.0.72"
   },
   "devDependencies": {
     "gatsby-plugin-root-import": "^2.0.5",
