--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-transformer-sharp": "^2.3.14",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-cookie-consent": "^5.1.3",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-moment": "^0.9.7",
