--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-responsive-carousel": "^3.2.4",
     "react-spring": "^9.0.0-beta.34",
     "react-use-gesture": "^7.0.5",
+    "scrollmagic": "^2.0.7",
     "styled-components": "^5.0.1",
     "styled-components-breakpoint": "^3.0.0-preview.20",
     "typeface-nunito-sans": "^0.0.72",
